--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <div>
   <input class="form-control" type="url" value="http://localhost:7474" id="neo4jUrl"/>
   <textarea name="cypher" id="cypher" rows="4" cols="120" data-lang="cypher" class="code form-control">
-  MATCH (n)-[r]->(m)
-  RETURN n,r,m
-  LIMIT 50;
+  START x  = node(*) RETURN x
   </textarea>
   <a href="#" title="Execute" id="execute"><i class="fa fa-play-circle-o"></i></a>
   </div>
